# NJA

./: .gitignore  NJA.py  README.md  pyproject.toml  root_package_tester.ipynb  root_test.ipynb
code/: NJA.py  WebTest.ipynb  root_package_tester.ipynb
docs/: Makefile
docs/source/: NJA.rst  conf.py  index.rst  modules.rst  src.rst  tutorial.rst
src/: NJA.py  WebTest.ipynb  __init__.py  root_package_tester.ipynb  root_test.ipynb
src/NJA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
